manifests/cluster-addons/democratic-csi/templates/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: democratic-csi-controller
  namespace: democratic-csi
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: democratic-csi
      app.kubernetes.io/component: controller

  enableDefaultDeny:
    ingress: true
    egress: true

  ingress: []

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: '6443'
              protocol: TCP

    - toCIDR:
        - 192.168.70.200/32
      toPorts:
        - ports:
            - port: '80'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: snapshot-controller
  namespace: democratic-csi
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: snapshot-controller

  enableDefaultDeny:
    ingress: true
    egress: true

  ingress: []

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: '6443'
              protocol: TCP
